# api/requestEth/v1/transaction.pb.go
@@ -4079,7 +4079,7 @@ type GetAddressBoxRequest struct {
 	Num        uint64 `protobuf:"varint,2,opt,name=num,proto3" json:"num,omitempty"`           // 0未上架，1上架中，2全部
 	NumTwo     uint64 `protobuf:"varint,5,opt,name=numTwo,proto3" json:"numTwo,omitempty"`     // 0全部，1表示20, 2表示50, 3表示100
 	NumThree   uint64 `protobuf:"varint,4,opt,name=numThree,proto3" json:"numThree,omitempty"` // 0倒叙，1正序
-	NumFour    uint64 `protobuf:"varint,9,opt,name=numFour,proto3" json:"numFour,omitempty"`   // 0倒叙，1正序
+	NumFour    uint64 `protobuf:"varint,9,opt,name=numFour,proto3" json:"numFour,omitempty"`   // 0默认，1倒叙，2正序
 	OpenStatus uint64 `protobuf:"varint,6,opt,name=openStatus,proto3" json:"openStatus,omitempty"`
 }
 
@@ -4419,23 +4419,25 @@ type GetAllInfoReply struct {
 	sizeCache     protoimpl.SizeCache
 	unknownFields protoimpl.UnknownFields
 
-	UserCount        uint64 `protobuf:"varint,1,opt,name=userCount,proto3" json:"userCount,omitempty"`                // 用户注册总数
-	TodayUserCount   uint64 `protobuf:"varint,2,opt,name=todayUserCount,proto3" json:"todayUserCount,omitempty"`      // 今日新增用户总数
-	TodayMintedCount uint64 `protobuf:"varint,3,opt,name=todayMintedCount,proto3" json:"todayMintedCount,omitempty"`  // 今日铸造量
-	TodayMintedSum   string `protobuf:"bytes,4,opt,name=todayMintedSum,proto3" json:"todayMintedSum,omitempty"`       // 今日铸造金额
-	MintedCount      uint64 `protobuf:"varint,5,opt,name=mintedCount,proto3" json:"mintedCount,omitempty"`            // 总铸造量
-	MintedSum        string `protobuf:"bytes,6,opt,name=mintedSum,proto3" json:"mintedSum,omitempty"`                 // 总铸金额
-	MintedCountOne   uint64 `protobuf:"varint,7,opt,name=mintedCountOne,proto3" json:"mintedCountOne,omitempty"`      // 总铸造量1档
-	MintedSumOne     string `protobuf:"bytes,8,opt,name=mintedSumOne,proto3" json:"mintedSumOne,omitempty"`           // 总铸金额1档
-	MintedCountTwo   uint64 `protobuf:"varint,9,opt,name=mintedCountTwo,proto3" json:"mintedCountTwo,omitempty"`      // 总铸造量2档
-	MintedSumTwo     string `protobuf:"bytes,10,opt,name=mintedSumTwo,proto3" json:"mintedSumTwo,omitempty"`          // 总铸金额2档
-	MintedCountThree uint64 `protobuf:"varint,11,opt,name=mintedCountThree,proto3" json:"mintedCountThree,omitempty"` // 总铸造量3档
-	MintedSumThree   string `protobuf:"bytes,12,opt,name=mintedSumThree,proto3" json:"mintedSumThree,omitempty"`      // 总铸金额3档
-	BuyCount         uint64 `protobuf:"varint,13,opt,name=buyCount,proto3" json:"buyCount,omitempty"`                 // 历史销售总量
-	BuySum           string `protobuf:"bytes,14,opt,name=buySum,proto3" json:"buySum,omitempty"`                      // 历史销售金额
-	TodayBuyCount    uint64 `protobuf:"varint,15,opt,name=todayBuyCount,proto3" json:"todayBuyCount,omitempty"`       // 今日历史销售总量
-	TodayBuySum      string `protobuf:"bytes,16,opt,name=todayBuySum,proto3" json:"todayBuySum,omitempty"`            // 今日历史销售金额
-	OpenReward       string `protobuf:"bytes,17,opt,name=openReward,proto3" json:"openReward,omitempty"`              // 盲盒总盈利
+	UserCount         uint64 `protobuf:"varint,1,opt,name=userCount,proto3" json:"userCount,omitempty"`                   // 用户注册总数
+	TodayUserCount    uint64 `protobuf:"varint,2,opt,name=todayUserCount,proto3" json:"todayUserCount,omitempty"`         // 今日新增用户总数
+	TodayMintedCount  uint64 `protobuf:"varint,3,opt,name=todayMintedCount,proto3" json:"todayMintedCount,omitempty"`     // 今日铸造量
+	TodayMintedSum    string `protobuf:"bytes,4,opt,name=todayMintedSum,proto3" json:"todayMintedSum,omitempty"`          // 今日铸造金额
+	MintedCount       uint64 `protobuf:"varint,5,opt,name=mintedCount,proto3" json:"mintedCount,omitempty"`               // 总铸造量
+	MintedSum         string `protobuf:"bytes,6,opt,name=mintedSum,proto3" json:"mintedSum,omitempty"`                    // 总铸金额
+	MintedCountNoOpen uint64 `protobuf:"varint,115,opt,name=mintedCountNoOpen,proto3" json:"mintedCountNoOpen,omitempty"` // 已铸造量未打卡
+	MintedSumNoOpen   string `protobuf:"bytes,116,opt,name=mintedSumNoOpen,proto3" json:"mintedSumNoOpen,omitempty"`      // 已铸金额未打卡
+	MintedCountOne    uint64 `protobuf:"varint,7,opt,name=mintedCountOne,proto3" json:"mintedCountOne,omitempty"`         // 总铸造量1档
+	MintedSumOne      string `protobuf:"bytes,8,opt,name=mintedSumOne,proto3" json:"mintedSumOne,omitempty"`              // 总铸金额1档
+	MintedCountTwo    uint64 `protobuf:"varint,9,opt,name=mintedCountTwo,proto3" json:"mintedCountTwo,omitempty"`         // 总铸造量2档
+	MintedSumTwo      string `protobuf:"bytes,10,opt,name=mintedSumTwo,proto3" json:"mintedSumTwo,omitempty"`             // 总铸金额2档
+	MintedCountThree  uint64 `protobuf:"varint,11,opt,name=mintedCountThree,proto3" json:"mintedCountThree,omitempty"`    // 总铸造量3档
+	MintedSumThree    string `protobuf:"bytes,12,opt,name=mintedSumThree,proto3" json:"mintedSumThree,omitempty"`         // 总铸金额3档
+	BuyCount          uint64 `protobuf:"varint,13,opt,name=buyCount,proto3" json:"buyCount,omitempty"`                    // 历史销售总量
+	BuySum            string `protobuf:"bytes,14,opt,name=buySum,proto3" json:"buySum,omitempty"`                         // 历史销售金额
+	TodayBuyCount     uint64 `protobuf:"varint,15,opt,name=todayBuyCount,proto3" json:"todayBuyCount,omitempty"`          // 今日历史销售总量
+	TodayBuySum       string `protobuf:"bytes,16,opt,name=todayBuySum,proto3" json:"todayBuySum,omitempty"`               // 今日历史销售金额
+	OpenReward        string `protobuf:"bytes,17,opt,name=openReward,proto3" json:"openReward,omitempty"`                 // 盲盒总盈利
 }
 
 func (x *GetAllInfoReply) Reset() {
@@ -4508,6 +4510,20 @@ func (x *GetAllInfoReply) GetMintedCount() uint64 {
 func (x *GetAllInfoReply) GetMintedSum() string {
 	if x != nil {
 		return x.MintedSum
+	}
+	return ""
+}
+
+func (x *GetAllInfoReply) GetMintedCountNoOpen() uint64 {
+	if x != nil {
+		return x.MintedCountNoOpen
+	}
+	return 0
+}
+
+func (x *GetAllInfoReply) GetMintedSumNoOpen() string {
+	if x != nil {
+		return x.MintedSumNoOpen
 	}
 	return ""
 }
@@ -5790,6 +5806,7 @@ type GetMarketListReply_List struct {
 	PriceUsdtNow float64 `protobuf:"fixed64,4,opt,name=priceUsdtNow,proto3" json:"priceUsdtNow,omitempty"` // 目前增长金额
 	BlockTime    uint64  `protobuf:"varint,5,opt,name=blockTime,proto3" json:"blockTime,omitempty"`        // 铸造时间
 	ListTime     uint64  `protobuf:"varint,6,opt,name=listTime,proto3" json:"listTime,omitempty"`          // 上架时间
+	Minter       string  `protobuf:"bytes,10,opt,name=minter,proto3" json:"minter,omitempty"`
 }
 
 func (x *GetMarketListReply_List) Reset() {
@@ -5864,6 +5881,13 @@ func (x *GetMarketListReply_List) GetListTime() uint64 {
 		return x.ListTime
 	}
 	return 0
+}
+
+func (x *GetMarketListReply_List) GetMinter() string {
+	if x != nil {
+		return x.Minter
+	}
+	return ""
 }
 
 var File_api_requestEth_v1_transaction_proto protoreflect.FileDescriptor
@@ -6327,14 +6351,14 @@ var file_api_requestEth_v1_transaction_proto_rawDesc = []byte{
 	0x6f, 0x18, 0x05, 0x20, 0x01, 0x28, 0x04, 0x52, 0x06, 0x6e, 0x75, 0x6d, 0x54, 0x77, 0x6f, 0x12,
 	0x10, 0x0a, 0x03, 0x6e, 0x75, 0x6d, 0x18, 0x04, 0x20, 0x01, 0x28, 0x04, 0x52, 0x03, 0x6e, 0x75,
 	0x6d, 0x12, 0x1a, 0x0a, 0x08, 0x6e, 0x75, 0x6d, 0x54, 0x68, 0x72, 0x65, 0x65, 0x18, 0x03, 0x20,
-	0x01, 0x28, 0x04, 0x52, 0x08, 0x6e, 0x75, 0x6d, 0x54, 0x68, 0x72, 0x65, 0x65, 0x22, 0x9d, 0x02,
+	0x01, 0x28, 0x04, 0x52, 0x08, 0x6e, 0x75, 0x6d, 0x54, 0x68, 0x72, 0x65, 0x65, 0x22, 0xb5, 0x02,
 	0x0a, 0x12, 0x47, 0x65, 0x74, 0x4d, 0x61, 0x72, 0x6b, 0x65, 0x74, 0x4c, 0x69, 0x73, 0x74, 0x52,
 	0x65, 0x70, 0x6c, 0x79, 0x12, 0x14, 0x0a, 0x05, 0x63, 0x6f, 0x75, 0x6e, 0x74, 0x18, 0x02, 0x20,
 	0x01, 0x28, 0x04, 0x52, 0x05, 0x63, 0x6f, 0x75, 0x6e, 0x74, 0x12, 0x3e, 0x0a, 0x04, 0x6c, 0x69,
 	0x73, 0x74, 0x18, 0x01, 0x20, 0x03, 0x28, 0x0b, 0x32, 0x2a, 0x2e, 0x61, 0x70, 0x69, 0x2e, 0x72,
 	0x65, 0x71, 0x75, 0x65, 0x73, 0x74, 0x45, 0x74, 0x68, 0x2e, 0x76, 0x31, 0x2e, 0x47, 0x65, 0x74,
 	0x4d, 0x61, 0x72, 0x6b, 0x65, 0x74, 0x4c, 0x69, 0x73, 0x74, 0x52, 0x65, 0x70, 0x6c, 0x79, 0x2e,
-	0x4c, 0x69, 0x73, 0x74, 0x52, 0x04, 0x6c, 0x69, 0x73, 0x74, 0x1a, 0xb0, 0x01, 0x0a, 0x04, 0x4c,
+	0x4c, 0x69, 0x73, 0x74, 0x52, 0x04, 0x6c, 0x69, 0x73, 0x74, 0x1a, 0xc8, 0x01, 0x0a, 0x04, 0x4c,
 	0x69, 0x73, 0x74, 0x12, 0x18, 0x0a, 0x07, 0x74, 0x6f, 0x6b, 0x65, 0x6e, 0x49, 0x64, 0x18, 0x02,
 	0x20, 0x01, 0x28, 0x04, 0x52, 0x07, 0x74, 0x6f, 0x6b, 0x65, 0x6e, 0x49, 0x64, 0x12, 0x1c, 0x0a,
 	0x09, 0x70, 0x72, 0x69, 0x63, 0x65, 0x55, 0x73, 0x64, 0x74, 0x18, 0x03, 0x20, 0x01, 0x28, 0x01,
@@ -6345,26 +6369,33 @@ var file_api_requestEth_v1_transaction_proto_rawDesc = []byte{
 	0x4e, 0x6f, 0x77, 0x12, 0x1c, 0x0a, 0x09, 0x62, 0x6c, 0x6f, 0x63, 0x6b, 0x54, 0x69, 0x6d, 0x65,
 	0x18, 0x05, 0x20, 0x01, 0x28, 0x04, 0x52, 0x09, 0x62, 0x6c, 0x6f, 0x63, 0x6b, 0x54, 0x69, 0x6d,
 	0x65, 0x12, 0x1a, 0x0a, 0x08, 0x6c, 0x69, 0x73, 0x74, 0x54, 0x69, 0x6d, 0x65, 0x18, 0x06, 0x20,
-	0x01, 0x28, 0x04, 0x52, 0x08, 0x6c, 0x69, 0x73, 0x74, 0x54, 0x69, 0x6d, 0x65, 0x22, 0x3b, 0x0a,
-	0x11, 0x47, 0x65, 0x74, 0x41, 0x6c, 0x6c, 0x49, 0x6e, 0x66, 0x6f, 0x52, 0x65, 0x71, 0x75, 0x65,
-	0x73, 0x74, 0x12, 0x14, 0x0a, 0x05, 0x73, 0x74, 0x61, 0x72, 0x74, 0x18, 0x01, 0x20, 0x01, 0x28,
-	0x04, 0x52, 0x05, 0x73, 0x74, 0x61, 0x72, 0x74, 0x12, 0x10, 0x0a, 0x03, 0x65, 0x6e, 0x64, 0x18,
-	0x02, 0x20, 0x01, 0x28, 0x04, 0x52, 0x03, 0x65, 0x6e, 0x64, 0x22, 0xf3, 0x04, 0x0a, 0x0f, 0x47,
-	0x65, 0x74, 0x41, 0x6c, 0x6c, 0x49, 0x6e, 0x66, 0x6f, 0x52, 0x65, 0x70, 0x6c, 0x79, 0x12, 0x1c,
-	0x0a, 0x09, 0x75, 0x73, 0x65, 0x72, 0x43, 0x6f, 0x75, 0x6e, 0x74, 0x18, 0x01, 0x20, 0x01, 0x28,
-	0x04, 0x52, 0x09, 0x75, 0x73, 0x65, 0x72, 0x43, 0x6f, 0x75, 0x6e, 0x74, 0x12, 0x26, 0x0a, 0x0e,
-	0x74, 0x6f, 0x64, 0x61, 0x79, 0x55, 0x73, 0x65, 0x72, 0x43, 0x6f, 0x75, 0x6e, 0x74, 0x18, 0x02,
-	0x20, 0x01, 0x28, 0x04, 0x52, 0x0e, 0x74, 0x6f, 0x64, 0x61, 0x79, 0x55, 0x73, 0x65, 0x72, 0x43,
-	0x6f, 0x75, 0x6e, 0x74, 0x12, 0x2a, 0x0a, 0x10, 0x74, 0x6f, 0x64, 0x61, 0x79, 0x4d, 0x69, 0x6e,
-	0x74, 0x65, 0x64, 0x43, 0x6f, 0x75, 0x6e, 0x74, 0x18, 0x03, 0x20, 0x01, 0x28, 0x04, 0x52, 0x10,
+	0x01, 0x28, 0x04, 0x52, 0x08, 0x6c, 0x69, 0x73, 0x74, 0x54, 0x69, 0x6d, 0x65, 0x12, 0x16, 0x0a,
+	0x06, 0x6d, 0x69, 0x6e, 0x74, 0x65, 0x72, 0x18, 0x0a, 0x20, 0x01, 0x28, 0x09, 0x52, 0x06, 0x6d,
+	0x69, 0x6e, 0x74, 0x65, 0x72, 0x22, 0x3b, 0x0a, 0x11, 0x47, 0x65, 0x74, 0x41, 0x6c, 0x6c, 0x49,
+	0x6e, 0x66, 0x6f, 0x52, 0x65, 0x71, 0x75, 0x65, 0x73, 0x74, 0x12, 0x14, 0x0a, 0x05, 0x73, 0x74,
+	0x61, 0x72, 0x74, 0x18, 0x01, 0x20, 0x01, 0x28, 0x04, 0x52, 0x05, 0x73, 0x74, 0x61, 0x72, 0x74,
+	0x12, 0x10, 0x0a, 0x03, 0x65, 0x6e, 0x64, 0x18, 0x02, 0x20, 0x01, 0x28, 0x04, 0x52, 0x03, 0x65,
+	0x6e, 0x64, 0x22, 0xcb, 0x05, 0x0a, 0x0f, 0x47, 0x65, 0x74, 0x41, 0x6c, 0x6c, 0x49, 0x6e, 0x66,
+	0x6f, 0x52, 0x65, 0x70, 0x6c, 0x79, 0x12, 0x1c, 0x0a, 0x09, 0x75, 0x73, 0x65, 0x72, 0x43, 0x6f,
+	0x75, 0x6e, 0x74, 0x18, 0x01, 0x20, 0x01, 0x28, 0x04, 0x52, 0x09, 0x75, 0x73, 0x65, 0x72, 0x43,
+	0x6f, 0x75, 0x6e, 0x74, 0x12, 0x26, 0x0a, 0x0e, 0x74, 0x6f, 0x64, 0x61, 0x79, 0x55, 0x73, 0x65,
+	0x72, 0x43, 0x6f, 0x75, 0x6e, 0x74, 0x18, 0x02, 0x20, 0x01, 0x28, 0x04, 0x52, 0x0e, 0x74, 0x6f,
+	0x64, 0x61, 0x79, 0x55, 0x73, 0x65, 0x72, 0x43, 0x6f, 0x75, 0x6e, 0x74, 0x12, 0x2a, 0x0a, 0x10,
 	0x74, 0x6f, 0x64, 0x61, 0x79, 0x4d, 0x69, 0x6e, 0x74, 0x65, 0x64, 0x43, 0x6f, 0x75, 0x6e, 0x74,
-	0x12, 0x26, 0x0a, 0x0e, 0x74, 0x6f, 0x64, 0x61, 0x79, 0x4d, 0x69, 0x6e, 0x74, 0x65, 0x64, 0x53,
-	0x75, 0x6d, 0x18, 0x04, 0x20, 0x01, 0x28, 0x09, 0x52, 0x0e, 0x74, 0x6f, 0x64, 0x61, 0x79, 0x4d,
-	0x69, 0x6e, 0x74, 0x65, 0x64, 0x53, 0x75, 0x6d, 0x12, 0x20, 0x0a, 0x0b, 0x6d, 0x69, 0x6e, 0x74,
-	0x65, 0x64, 0x43, 0x6f, 0x75, 0x6e, 0x74, 0x18, 0x05, 0x20, 0x01, 0x28, 0x04, 0x52, 0x0b, 0x6d,
-	0x69, 0x6e, 0x74, 0x65, 0x64, 0x43, 0x6f, 0x75, 0x6e, 0x74, 0x12, 0x1c, 0x0a, 0x09, 0x6d, 0x69,
-	0x6e, 0x74, 0x65, 0x64, 0x53, 0x75, 0x6d, 0x18, 0x06, 0x20, 0x01, 0x28, 0x09, 0x52, 0x09, 0x6d,
-	0x69, 0x6e, 0x74, 0x65, 0x64, 0x53, 0x75, 0x6d, 0x12, 0x26, 0x0a, 0x0e, 0x6d, 0x69, 0x6e, 0x74,
+	0x18, 0x03, 0x20, 0x01, 0x28, 0x04, 0x52, 0x10, 0x74, 0x6f, 0x64, 0x61, 0x79, 0x4d, 0x69, 0x6e,
+	0x74, 0x65, 0x64, 0x43, 0x6f, 0x75, 0x6e, 0x74, 0x12, 0x26, 0x0a, 0x0e, 0x74, 0x6f, 0x64, 0x61,
+	0x79, 0x4d, 0x69, 0x6e, 0x74, 0x65, 0x64, 0x53, 0x75, 0x6d, 0x18, 0x04, 0x20, 0x01, 0x28, 0x09,
+	0x52, 0x0e, 0x74, 0x6f, 0x64, 0x61, 0x79, 0x4d, 0x69, 0x6e, 0x74, 0x65, 0x64, 0x53, 0x75, 0x6d,
+	0x12, 0x20, 0x0a, 0x0b, 0x6d, 0x69, 0x6e, 0x74, 0x65, 0x64, 0x43, 0x6f, 0x75, 0x6e, 0x74, 0x18,
+	0x05, 0x20, 0x01, 0x28, 0x04, 0x52, 0x0b, 0x6d, 0x69, 0x6e, 0x74, 0x65, 0x64, 0x43, 0x6f, 0x75,
+	0x6e, 0x74, 0x12, 0x1c, 0x0a, 0x09, 0x6d, 0x69, 0x6e, 0x74, 0x65, 0x64, 0x53, 0x75, 0x6d, 0x18,
+	0x06, 0x20, 0x01, 0x28, 0x09, 0x52, 0x09, 0x6d, 0x69, 0x6e, 0x74, 0x65, 0x64, 0x53, 0x75, 0x6d,
+	0x12, 0x2c, 0x0a, 0x11, 0x6d, 0x69, 0x6e, 0x74, 0x65, 0x64, 0x43, 0x6f, 0x75, 0x6e, 0x74, 0x4e,
+	0x6f, 0x4f, 0x70, 0x65, 0x6e, 0x18, 0x73, 0x20, 0x01, 0x28, 0x04, 0x52, 0x11, 0x6d, 0x69, 0x6e,
+	0x74, 0x65, 0x64, 0x43, 0x6f, 0x75, 0x6e, 0x74, 0x4e, 0x6f, 0x4f, 0x70, 0x65, 0x6e, 0x12, 0x28,
+	0x0a, 0x0f, 0x6d, 0x69, 0x6e, 0x74, 0x65, 0x64, 0x53, 0x75, 0x6d, 0x4e, 0x6f, 0x4f, 0x70, 0x65,
+	0x6e, 0x18, 0x74, 0x20, 0x01, 0x28, 0x09, 0x52, 0x0f, 0x6d, 0x69, 0x6e, 0x74, 0x65, 0x64, 0x53,
+	0x75, 0x6d, 0x4e, 0x6f, 0x4f, 0x70, 0x65, 0x6e, 0x12, 0x26, 0x0a, 0x0e, 0x6d, 0x69, 0x6e, 0x74,
 	0x65, 0x64, 0x43, 0x6f, 0x75, 0x6e, 0x74, 0x4f, 0x6e, 0x65, 0x18, 0x07, 0x20, 0x01, 0x28, 0x04,
 	0x52, 0x0e, 0x6d, 0x69, 0x6e, 0x74, 0x65, 0x64, 0x43, 0x6f, 0x75, 0x6e, 0x74, 0x4f, 0x6e, 0x65,
 	0x12, 0x22, 0x0a, 0x0c, 0x6d, 0x69, 0x6e, 0x74, 0x65, 0x64, 0x53, 0x75, 0x6d, 0x4f, 0x6e, 0x65,
